force-app/main/default/objects/Referral__c/fields/Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Amount_Received__c</fullName>
    <description>Referral field added for WCA Referral to JEU to populate Garment Fund Referral Report.</description>
    <label>Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>