force-app/main/default/objects/Referral__c/fields/BOFE_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Case_Number__c</fullName>
    <label>BOFE Case Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>