force-app/main/default/objects/Referral__c/fields/BOFE_Division_Investigator_Email__c.field-meta.xml
<CustomField>
    <fullName>BOFE_Division_Investigator_Email__c</fullName>
    <label>BOFE Division Investigator Email</label>
    <type>Email</type>
</CustomField>