force-app/main/default/objects/Referral__c/fields/Case_Employer_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Employer_ID__c</fullName>
    <description>Pulls the case employer down to the referral for use in initiating flows</description>
    <formula>Case__r.Employer__c</formula>
    <label>Case Employer ID</label>
    <type>Text</type>
</CustomField>