force-app/main/default/objects/Referral__c/fields/Case_Name__c.field-meta.xml
<CustomField>
    <fullName>Case_Name__c</fullName>
    <formula>Case__r.Case_Name__c</formula>
    <label>Case Name</label>
    <type>Text</type>
</CustomField>