force-app/main/default/objects/Referral__c/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <label>Confidential</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>