force-app/main/default/objects/Referral__c/fields/Cost_of_Suit_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Cost_of_Suit_Reimbursement__c</fullName>
    <label>Cost of Suit (Reimbursement)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>