force-app/main/default/objects/Referral__c/fields/Court_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Date__c</fullName>
    <inlineHelpText>Date for which the court hearing has been set</inlineHelpText>
    <label>Court Date</label>
    <type>Date</type>
</CustomField>