force-app/main/default/objects/Referral__c/fields/Court_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Court_Filing_Date__c</fullName>
    <label>Court Filing Date</label>
    <type>Date</type>
</CustomField>