force-app/main/default/objects/Referral__c/fields/Date_Complaint_was_Filed_with_DLSE__c.field-meta.xml
<CustomField>
    <fullName>Date_Complaint_was_Filed_with_DLSE__c</fullName>
    <formula>DATEVALUE( Case__r.File_Date_Time__c )</formula>
    <label>Date Complaint was Filed with DLSE</label>
    <type>Date</type>
</CustomField>