force-app/main/default/objects/Referral__c/fields/Date_of_Payment_Provided_to_Plaintiff__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Payment_Provided_to_Plaintiff__c</fullName>
    <description>Referral field added for WCA Referral to JEU to populate Garment Fund Referral Report.</description>
    <label>Date Payment Provided to Plaintiff</label>
    <type>Date</type>
</CustomField>