force-app/main/default/objects/Referral__c/fields/De_Nova_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>De_Nova_Closed_Reason__c</fullName>
    <label>De Novo Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>The case has been settled and plaintiff has received the full settlement amount</fullName>
            </value>
            <value>
                <fullName>An Acknowledgment of Full Satisfaction of Judgment has been filed and entered by the court</fullName>
            </value>
            <value>
                <fullName>Judgment entered for the plaintiff who chose to pursue collection of judgment on his/her own behalf (see Reassignment of Claim)</fullName>
            </value>
            <value>
                <fullName>Judgment for the plaintiff but no known bank assets for defendant employer</fullName>
            </value>
            <value>
                <fullName>Judgment in plaintiff’s favor has been partially satisfied. No other known assets of the defendant</fullName>
            </value>
            <value>
                <fullName>Defendant’s appeal has been dismissed. Request is hereby made for district office to enter judgment on underlying ODA and record Certificate of lien</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>