force-app/main/default/objects/Referral__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Investigation</fullName>
            </value>
            <value>
                <fullName>No Investigation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>