force-app/main/default/objects/Referral__c/fields/DeNovo_Closed_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>DeNovo_Closed_Reason_Other__c</fullName>
    <inlineHelpText>Attorneys: If “Other” was selected above, specify the reason for closing here.</inlineHelpText>
    <label>De Novo Closed Reason - Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>