force-app/main/default/objects/Referral__c/fields/Determination_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Determination_Issued_Date__c</fullName>
    <formula>Case__r.Determination_Issued_Date__c</formula>
    <label>Determination Issued Date</label>
    <type>Date</type>
</CustomField>