force-app/main/default/objects/Referral__c/fields/Determination_Type__c.field-meta.xml
<CustomField>
    <fullName>Determination_Type__c</fullName>
    <formula>TEXT(Case__r.Determination_Type__c)</formula>
    <label>Determination Type</label>
    <type>Text</type>
</CustomField>