force-app/main/default/objects/Referral__c/fields/Division_Investigator_BOFE__c.field-meta.xml
<CustomField>
    <fullName>Division_Investigator_BOFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Division Investigator (BOFE)</label>
    <referenceTo>DIR_Employee__c</referenceTo>
    <relationshipLabel>Referrals (Division Investigator (BOFE))</relationshipLabel>
    <relationshipName>Referrals3</relationshipName>
    <type>Lookup</type>
</CustomField>