force-app/main/default/objects/Referral__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <description>Filing date of the court action</description>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>