force-app/main/default/objects/Referral__c/fields/First_Reminder_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder_Date__c</fullName>
    <description>Date that the first reminder should be sent. Determined by taking the value of the First Reminder Days field as an input to a the setReminderDate method on the referralMethods class called from the update event on the referral. Method calculates the number of business days from the current date to the date on which a reminder should be sent to the assigned individuals</description>
    <label>First Reminder Date</label>
    <type>Date</type>
</CustomField>