force-app/main/default/objects/Referral__c/fields/Further_Action_Needed__c.field-meta.xml
<CustomField>
    <fullName>Further_Action_Needed__c</fullName>
    <inlineHelpText>Attorneys: Indicate if Deputy must follow-up with further action.</inlineHelpText>
    <label>Further Action Needed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>