force-app/main/default/objects/Referral__c/fields/JEU_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>JEU_Reject_Reason__c</fullName>
    <label>JEU Reject Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>