force-app/main/default/objects/Referral__c/fields/Judgement__c.field-meta.xml
<CustomField>
    <fullName>Judgement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Judgment</label>
    <referenceTo>Judgement__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>