force-app/main/default/objects/Referral__c/fields/Judgement_Settlement_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Judgement_Settlement_Total_Amount__c</fullName>
    <description>Total amount of judgement for referrals resulting in litigated cases</description>
    <label>Judgment/Settlement Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>