force-app/main/default/objects/Referral__c/fields/Judgment_Amount_Collected__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Amount_Collected__c</fullName>
    <label>Judgment Amount Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>