force-app/main/default/objects/Referral__c/fields/Judgment_Injunctive_Relief__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Injunctive_Relief__c</fullName>
    <label>Injunctive Relief</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>