force-app/main/default/objects/Referral__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <formula>TEXT(Case__r.Language2__c)</formula>
    <label>Language</label>
    <type>Text</type>
</CustomField>