force-app/main/default/objects/Referral__c/fields/Last_Modified_Days__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_Days__c</fullName>
    <formula>IF(
ISPICKVAL(Request_Status__c,&quot;Closed&quot;), null,
(TODAY() - DATEVALUE(LastModifiedDate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>