force-app/main/default/objects/Referral__c/fields/Legal_Closed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Legal_Closed_Reason__c</fullName>
    <label>Legal Closed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>Case settled and plaintiff has received full settlement amt</fullName>
            </value>
            <value>
                <fullName>Acknowledgement of Full Satisfaction</fullName>
            </value>
            <value>
                <fullName>Judgment entered for the plaintiff who shoes to pursue</fullName>
            </value>
            <value>
                <fullName>Judgment for the plaintiff but no know bank assets</fullName>
            </value>
            <value>
                <fullName>Case settled and all settlement terms were complied with</fullName>
            </value>
            <value>
                <fullName>Case settled and awaiting compliance</fullName>
            </value>
            <value>
                <fullName>Case settled and legal has to enforce settlement</fullName>
            </value>
            <value>
                <fullName>Judgment entered for Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Judgment entered against Labor Commissioner</fullName>
            </value>
            <value>
                <fullName>Default Judgment Entered</fullName>
            </value>
            <value>
                <fullName>Default Judgment Rejected</fullName>
            </value>
            <value>
                <fullName>Closed due to Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Referral Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>