force-app/main/default/objects/Referral__c/fields/Legal_Office_lookup__c.field-meta.xml
<CustomField>
    <fullName>Legal_Office_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Deputies: Add Legal Office receiving the referral.</inlineHelpText>
    <label>Legal Office</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Only Legal offices can be selected.</errorMessage>
        <filterItems>
            <field>Office__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Legal</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>