force-app/main/default/objects/Referral__c/fields/Legal_Ref_Closing_Date__c.field-meta.xml
<CustomField>
    <fullName>Legal_Ref_Closing_Date__c</fullName>
    <inlineHelpText>Attorneys: Indicate date referral completed.</inlineHelpText>
    <label>Legal Ref. Closing Date</label>
    <type>Date</type>
</CustomField>