force-app/main/default/objects/Referral__c/fields/Legal_Referral__c.field-meta.xml
<CustomField>
    <fullName>Legal_Referral__c</fullName>
    <label>Legal Referral</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>