force-app/main/default/objects/Referral__c/fields/Legal_Unit_Case__c.field-meta.xml
<CustomField>
    <fullName>Legal_Unit_Case__c</fullName>
    <label>Legal Unit Case #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>