force-app/main/default/objects/Referral__c/fields/Litigation_Status__c.field-meta.xml
<CustomField>
    <fullName>Litigation_Status__c</fullName>
    <description>When litigation is filed, the status of the litigation is tracked here.</description>
    <label>Litigation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Trial Pending</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>