force-app/main/default/objects/Referral__c/fields/Lost_Wages_Back_Pay__c.field-meta.xml
<CustomField>
    <fullName>Lost_Wages_Back_Pay__c</fullName>
    <label>Lost Wages/Back Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>