force-app/main/default/objects/Referral__c/fields/Mediation_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Scheduled_Date__c</fullName>
    <label>Mediation Scheduled Date</label>
    <type>Date</type>
</CustomField>