force-app/main/default/objects/Referral__c/fields/Mediation_Status__c.field-meta.xml
<CustomField>
    <fullName>Mediation_Status__c</fullName>
    <label>Mediation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requested</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>