force-app/main/default/objects/Referral__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>Attorney will select the Referral Outcome from the list of options then set the Request Status to Closed.</description>
    <inlineHelpText>Attorney will select the Referral Outcome from the list of options then set the Request Status to Closed.</inlineHelpText>
    <label>Referral Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Request Completed</fullName>
            </value>
            <value>
                <fullName>Issue/Granted by Court</fullName>
            </value>
            <value>
                <fullName>Denied by Court</fullName>
            </value>
            <value>
                <fullName>Request Declined by Legal</fullName>
            </value>
            <value>
                <fullName>Litigation Pending/Filed</fullName>
            </value>
            <value>
                <fullName>Judgment in favor of DLSE</fullName>
            </value>
            <value>
                <fullName>Judgement against DLSE</fullName>
            </value>
            <value>
                <fullName>Case Settled</fullName>
            </value>
            <value>
                <fullName>Citation</fullName>
            </value>
            <value>
                <fullName>No Citation</fullName>
            </value>
            <value>
                <fullName>Lawsuit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>