force-app/main/default/objects/Referral__c/fields/Outcome_Recommendation__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Recommendation__c</fullName>
    <inlineHelpText>Attorneys: Provide further detail on the legal response.</inlineHelpText>
    <label>Outcome / Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>