force-app/main/default/objects/Referral__c/fields/PAGA_Point_Person_Email__c.field-meta.xml
<CustomField>
    <fullName>PAGA_Point_Person_Email__c</fullName>
    <label>PAGA Point Person Email</label>
    <type>Email</type>
</CustomField>