force-app/main/default/objects/Referral__c/fields/Payment_Plan_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Details__c</fullName>
    <inlineHelpText>Enter details of: payment plan schedule, including Total Settlement Amount, date first payment due, future payment dates, payment amount(s)</inlineHelpText>
    <label>Payment Plan Details</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>