force-app/main/default/objects/Referral__c/fields/Penalty_L_C_2814__c.field-meta.xml
<CustomField>
    <fullName>Penalty_L_C_2814__c</fullName>
    <label>Penalty L.C. 2814</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>