force-app/main/default/objects/Referral__c/fields/Priority_Alleged_Retaliation__c.field-meta.xml
<CustomField>
    <fullName>Priority_Alleged_Retaliation__c</fullName>
    <label>Priority Alleged Retaliation</label>
    <type>TextArea</type>
</CustomField>