force-app/main/default/objects/Referral__c/fields/Priority_Claimant_Name__c.field-meta.xml
<CustomField>
    <fullName>Priority_Claimant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Priority Claimant Name</label>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Referrals (Priority Claimant Name)</relationshipLabel>
    <relationshipName>Priority_Claimant_Name</relationshipName>
    <type>Lookup</type>
</CustomField>