force-app/main/default/objects/Referral__c/fields/Priority_RCI_Case__c.field-meta.xml
<CustomField>
    <fullName>Priority_RCI_Case__c</fullName>
    <formula>Case__r.Case_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority RCI Case #</label>
    <type>Text</type>
</CustomField>